@@ -1,0 +1,79 @@
+==========================
+WHY DO WE NEED THESE IDs?
+==========================
+
+USB is more than a low level protocol for data transport. It also defines a common set of requests which must be understood by all devices. And as part of these common requests, the standard defines data structures, the Descriptors, which are used to describe the properties of the device.
+
+From the perspective of an operating system, it is therefore possible to find out basic properties of a device (such as e.g. the manufacturer and the name of the device) without a device-specific driver. This is essential because the operating system can choose a driver to load based on this information.
+
+Among the most important properties in the Device Descriptor are the USB Vendor- and Product-ID. Both are 16 bit integers. The most simple form of driver matching is based on these IDs. The driver announces the Vendor- and Product-IDs of the devices it can handle and the operating system loads the appropriate driver when the device is connected.
+
+It is obvious that this technique works only if the pair Vendor- plus Product-ID is unique: Two devices which may require separate drivers must not have the same pair of IDs.
+
+
+=====================================================
+HOW DOES THE USB STANDARD ENSURE THAT IDs ARE UNIQUE?
+=====================================================
+
+Since it is so important that USB IDs are unique, the USB Implementers Forum, Inc. (usb.org) needs a way to enforce this legally. It is not forbidden by law to build a device and assign it any random numbers as IDs, only by an agreement set forth by usb.org. The agreement binds only parties who agreed to it, of course. Everybody else is free to use any numbers for their IDs.
+
+So how can usb.org ensure that every manufacturer of USB devices enters into an agreement with them? They do it via trademark licensing. Usb.org has registered the trademark "USB", all associated logos and related terms. If you want to put an USB logo on your product or claim that it is USB compliant, you must license these trademarks from usb.org. And this is where you enter into an agreement. See the "USB-IF Trademark License Agreement and Usage Guidelines for the USB-IF Logo" at http://www.usb.org/developers/logo_license/.
+
+Licensing the USB trademarks requires that you buy a USB Vendor-ID from usb.org (one-time fee of ca. 2,000 USD), that you become a member of usb.org (yearly fee of ca. 4,000 USD) and that you meet all the technical specifications from the USB spec.
+
+This means that most hobbyists and small companies will never be able to become USB compliant, just because membership is so expensive. And you can't be compliant with a driver based on V-USB anyway, because the AVR's port pins don't meet the electrical specifications for USB. So, in principle, all hobbyists and small companies are free to choose any random numbers for their IDs. They have nothing to lose...
+
+There is one exception worth noting, though: If you use a sub-component which implements USB, the vendor of the sub-components may guarantee USB compliance. This might apply to some or all of FTDI's solutions.
+
+
+=======================================================================
+WHY SHOULD YOU OBTAIN USB IDs EVEN IF YOU DON'T LICENSE USB TRADEMARKS?
+=======================================================================
+
+You have learned in the previous section that you are free to choose any numbers for your IDs anyway. So why not do exactly this? There is still the technical issue. If you choose IDs which are already in use by somebody else, operating systems will load the wrong drivers and your device won't work. Even if you choose IDs which are not currently in use, they may be in use in the next version of the operating system or in an automatic update.
+
+So what you need is a pair of Vendor- and Product-IDs for which you have the guarantee that no USB compliant product uses them. This implies that no operating system will ever ship with drivers responsible for these IDs.
+
+
+==============================================
+HOW DOES OBJECTIVE DEVELOPMENT HANDLE USB IDs?
+==============================================
+
+Objective Development gives away pairs of USB-IDs with their V-USB licenses. In order to ensure that these IDs are unique, Objective Development has an agreement with the company/person who has bought the USB Vendor-ID from usb.org. This agreement ensures that a range of USB Product-IDs is reserved for assignment by Objective Development and that the owner of the Vendor-ID won't give it to anybody else.
+
+This means that you have to trust three parties that they ensure uniqueness for your IDs:
+
+  - Objective Development, that they don't give the same PID to more than
+    one person.
+  - The owner of the Vendor-ID that they don't assign PIDs from the range
+    assigned to Objective Development to anybody else
+  - Usb.org that they don't assign the same Vendor-ID a second time.
+
+
+==================================
+WHO IS THE OWNER OF THE VENDOR-ID?
+==================================
+
+Objective Development has obtained three ranges of USB Product-IDs. Two ranges under the Vendor-ID 5824 from Wouter van Ooijen (Van Ooijen Technische Informatica, www.voti.nl): 1500-1509 and 10200-10299 and one under the Vendor-ID 8352 from Jason Kotzin (Clay Logic): 16384-32767. Both VID owners have received their Vendor-ID directly from usb.org.
+
+
+=========================================================================
+CAN I USE USB-IDs FROM OBJECTIVE DEVELOPMENT WITH OTHER DRIVERS/HARDWARE?
+=========================================================================
+
+The short answer is: Yes. All you get is a guarantee that the IDs are never assigned to anybody else. What more do you need?
+
+
+============================
+WHAT ABOUT SHARED ID PAIRS?
+============================
+
+Objective Development has reserved some PID/VID pairs for shared use. You have no guarantee of uniqueness for them, except that no USB compliant device uses them. In order to avoid technical problems, we must ensure that all devices with the same pair of IDs use the same driver on kernel level. For details, see the text which describes the shared IDs.
+
+
+======================================================
+I HAVE HEARD THAT SUB-LICENSING OF USB-IDs IS ILLEGAL?
+======================================================
+
+A 16 bit integer number cannot be protected by copyright laws. It is not sufficiently complex. And since none of the parties involved entered into the USB-IF Trademark License Agreement, we are not bound to this agreement. So there is no reason why it should be illegal to sub-license USB-IDs.
+
